--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.6",
+    "google-map-react": "^2.2.1",
+    "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "swiper": "^9.3.2",
